# point_painting

./: CMakeLists.txt  README.md  dependency.repos  package.xml
config/: parameter.yaml  pointpainting.param.yaml  pointpainting_config.yaml
include/point_painting/: point_painting_component.hpp  utils.hpp
include/point_painting_component/: point_painting_component.hpp  visibility_control.h
launch/: point_painting_launch.py  point_painting_launch.xml
msg/: SegmentationInfo.msg
src/: point_painting_component.cpp  point_painting_node.cpp  utils.cpp
