<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>point_painting</name>
   <version>0.0.0</version>
   <description>PointPainting</description>
   <maintainer email="yoshida.keisuke622@kyutech.jp">maleicacid</maintainer>
   <license>Apache-2.0</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
   
   <!--  <追加部>-->
   <build_depend>detic_onnx_ros2_msg</build_depend>
   <exec_depend>detic_onnx_ros2_msg</exec_depend>
   <!--  <ここまで>-->

   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>pcl_conversions</depend>
   <depend>pcl_ros</depend>
   <depend>tf2</depend>
   <depend>tf2_eigen</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_sensor_msgs</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>Boost</depend>
   <depend>message_synchronizer</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ouxt_lint_common</test_depend>
   <export>
      <build_type>ament_cmake</build_type>
   </export>

</package>
